--- a/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
+++ b/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
@@ -1,1 +1,7 @@
-{{> button button--IsSpan=true button--IsIcon=true button--icon="grip-vertical" button--IsPlain=true button--IsDisabled=dual-list-selector-draggable-button--IsDisabled }}
+{{> button
+  button--IsSpan=true
+  button--IsIcon=true
+  button--icon="grip-vertical"
+  button--IsPlain=true
+  button--aria-label="Drag item"
+  button--IsDisabled=dual-list-selector-draggable-button--IsDisabled}}
