--- a/src/patternfly/components/Table/table-td.hbs
+++ b/src/patternfly/components/Table/table-td.hbs
@@ -45,9 +45,10 @@
           button--IsIcon=true
           button--icon-template="table-toggle-icon"
           button--IsExpanded=table-tr--IsExpanded
-          button--IsAriaExpanded=table-tr--IsExpanded
-          button--id=(dasherize table--id 'toggle' table-tr--index)
-      }}
+          button--id=(concat table--id '-expandable-toggle-' table-tr--tree--index)
+          button--aria-label="Details"
+          button--aria-labelledby=(concat table--id '-node-' table-tr--tree--index ' ' table--id '-expandable-toggle-' table-tr--tree--index)
+          button--id=(dasherize table--id 'toggle' table-tr--index)}}
     {{else if @partial-block}}
       {{> @partial-block}}
     {{/if}}
