--- a/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
+++ b/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
@@ -13,6 +13,6 @@
     button--aria-describedby=table-tr--IsExpanded
     button--aria-label=(ternary IsThead 'Toggle all rows' 'Toggle row')
     button--aria-labelledby=(dasherize table--id 'node' table-tr--index)
-    button--aria-control=(dasherize table--id 'content' table-tr--index)
+    button--aria-controls=(dasherize table--id 'content' table-tr--index)
     button--id=(dasherize table--id 'expandable-toggle' table-tr--index)}}
 {{/table-td}}
