--- a/src/patternfly/components/Table/table-td.hbs
+++ b/src/patternfly/components/Table/table-td.hbs
@@ -38,6 +38,7 @@
     {{else if table-td--IsDraggable}}
       {{> table-draggable-button}}
     {{else if table-td--IsToggle}}
+      {{#> wrapper table-td--row-index=(ternary table-tr--tree--index table-tr--tree--index table-tr--index)}}
       {{> button
           button--aria-label='Toggle row'
           button--IsSmall=table--IsCompact
@@ -45,10 +46,11 @@
           button--IsIcon=true
           button--icon-template="table-toggle-icon"
           button--IsExpanded=table-tr--IsExpanded
-          button--id=(concat table--id '-expandable-toggle-' table-tr--tree--index)
+          button--id=(concat table--id '-expandable-toggle-' table-td--row-index)
           button--aria-label="Details"
-          button--aria-labelledby=(concat table--id '-node-' table-tr--tree--index ' ' table--id '-expandable-toggle-' table-tr--tree--index)
-          button--id=(dasherize table--id 'toggle' table-tr--index)}}
+          button--aria-labelledby=(concat table--id '-node-' table-td--row-index ' ' table--id '-expandable-toggle-' table-td--row-index)
+          button--id=(dasherize table--id 'toggle' table-td--row-index)}}
+        {{/wrapper}}
     {{else if @partial-block}}
       {{> @partial-block}}
     {{/if}}
