--- a/src/patternfly/demos/Table/table-expandable-table.hbs
+++ b/src/patternfly/demos/Table/table-expandable-table.hbs
@@ -1,6 +1,6 @@
 {{#> table table--id=(concat page--id '-table') table--IsGrid=true table--modifier="pf-m-grid-md" table--IsExpandable=true table--attribute='aria-label="Expandable table example"'}}
   {{#> table-thead}}
-    {{#> table-tr table-tr--index='1' table-tr--index="thead"}}
+    {{#> table-tr table-tr--index="thead"}}
       {{> table-cell-toggle}}
       {{> table-cell-empty}}
       {{#> table-th table-th--attribute='scope="col"' table-th--modifier="pf-m-width-30"}}
