--- a/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
+++ b/src/patternfly/components/DualListSelector/dual-list-selector-draggable-button.hbs
@@ -1,5 +1,6 @@
+{{! button--type="span" needs to be used over button--IsSpan becasue this element can't be focusable}}
 {{> button
-  button--IsSpan=true
+  button--type="span"
   button--IsIcon=true
   button--icon="grip-vertical"
   button--IsPlain=true
