fix(beta bugs): minor component updates

--- a/src/patternfly/components/ModalBox/modal-box.scss
+++ b/src/patternfly/components/ModalBox/modal-box.scss
@@ -41,6 +41,7 @@
   // Title
   --#{$modal-box}__title--LineHeight: var(--pf-t--global--font--line-height--heading);
   --#{$modal-box}__title--FontFamily: var(--pf-t--global--font--family--heading);
+  --#{$modal-box}__title--FontWeight: var(--pf-t--global--font--weight--heading);
   --#{$modal-box}__title--FontSize: var(--pf-t--global--font--size--heading--md);
 
   // Title icon
@@ -191,6 +192,7 @@
   flex: 0 0 auto;
   font-family: var(--#{$modal-box}__title--FontFamily);
   font-size: var(--#{$modal-box}__title--FontSize);
+  font-weight: var(--#{$modal-box}__title--FontWeight);
   line-height: var(--#{$modal-box}__title--LineHeight);
 
   &.pf-m-icon {
