chore(list): update spacing

--- a/src/patternfly/components/List/list.scss
+++ b/src/patternfly/components/List/list.scss
@@ -3,18 +3,24 @@
 :where(:root, .#{$list}) {
   // list
   --#{$list}--PaddingInlineStart: var(--pf-t--global--spacer--lg);
-  --#{$list}--nested--MarginBlockStart: var(--pf-t--global--spacer--sm);
-  --#{$list}--nested--MarginInlineStart: var(--pf-t--global--spacer--sm);
   --#{$list}--ul--ListStyle: var(--pf-t--global--list-style);
-  --#{$list}--li--MarginBlockStart: var(--pf-t--global--spacer--sm);
+  --#{$list}--Gap: var(--pf-t--global--spacer--sm);
+
+  // nested
+  --#{$list}--nested--PaddingBlockStart: var(--#{$list}--Gap);
+
+  // plain
+  --#{$list}--m-plain--PaddingInlineStart: 0;
 
   // inline
-  --#{$list}--m-inline--li--MarginInlineEnd: var(--pf-t--global--spacer--lg);
+  --#{$list}--m-inline--PaddingInlineStart: 0;
+  --#{$list}--m-inline--ColumnGap: var(--pf-t--global--spacer--lg);
+  --#{$list}--m-inline--RowGap: var(--pf-t--global--spacer--xs);
 
   // bordered
-  --#{$list}--m-bordered--li--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
-  --#{$list}--m-bordered--li--BorderBlockEndColor: var(--pf-t--global--border--color--default);
-  --#{$list}--m-bordered--li--BorderBlockEndWidth: var(--pf-t--global--border--width--divider--default);
+  --#{$list}--m-bordered--li--PaddingBlockStart: var(--#{$list}--Gap);
+  --#{$list}--m-bordered--li--BorderBlockStartColor: var(--pf-t--global--border--color--default);
+  --#{$list}--m-bordered--li--BorderBlockStartWidth: var(--pf-t--global--border--width--divider--default);
 
   // icon
   --#{$list}__item-icon--MinWidth: var(--pf-t--global--icon--size--sm);
@@ -28,34 +34,17 @@
 }
 
 .#{$list} {
+  display: flex;
+  flex-direction: column;
+  gap: var(--#{$list}--Gap);
   padding-inline-start: var(--#{$list}--PaddingInlineStart);
 
-  ol,
-  ul {
-    margin-block-start: var(--#{$list}--nested--MarginBlockStart);
-    margin-inline-start: var(--#{$list}--nested--MarginInlineStart);
-  }
-
-  li + li {
-    margin-block-start: var(--#{$list}--li--MarginBlockStart);
+  & & {
+    padding-block-start: var(--#{$list}--nested--PaddingBlockStart);
   }
 
   @at-root ul#{&} {
     list-style: var(--#{$list}--ul--ListStyle);
-  }
-
-  .#{$list}__item {
-    display: flex;
-  }
-
-  .#{$list}__item-icon {
-    flex-shrink: 0;
-    min-width: var(--#{$list}__item-icon--MinWidth);
-    margin-block-start: var(--#{$list}__item-icon--MarginBlockStart);
-    margin-inline-end: var(--#{$list}__item-icon--MarginInlineEnd);
-    font-size: var(--#{$list}__item-icon--FontSize);
-    line-height: 1;
-    color: var(--#{$list}__item-icon--Color);
   }
 
   &.pf-m-icon-lg {
@@ -66,36 +55,38 @@
   }
 
   &.pf-m-plain {
-    --#{$list}--PaddingInlineStart: 0;
+    --#{$list}--PaddingInlineStart: var(--#{$list}--m-plain--PaddingInlineStart);
 
     list-style: none;
   }
 
   &.pf-m-inline {
-    --#{$list}--PaddingInlineStart: 0;
+    --#{$list}--PaddingInlineStart: var(--#{$list}--m-inline--PaddingInlineStart);
+    --#{$list}--Gap: var(--#{$list}--m-inline--RowGap) var(--#{$list}--m-inline--ColumnGap);
 
-    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     list-style: none;
-
-    li {
-      --#{$list}--li--MarginBlockStart: 0;
-
-      &:not(:last-child) {
-        margin-inline-end: var(--#{$list}--m-inline--li--MarginInlineEnd);
-      }
-    }
   }
 
   &.pf-m-bordered {
-    > * {
-      padding-block-end: var(--#{$list}--m-bordered--li--PaddingBlockEnd);
-      border-block-end: var(--#{$list}--m-bordered--li--BorderBlockEndWidth) solid var(--#{$list}--m-bordered--li--BorderBlockEndColor);
-    }
-
-    > :last-child {
-      --#{$list}--m-bordered--li--PaddingBlockEnd: 0;
-      --#{$list}--m-bordered--li--BorderBlockEndWidth: 0;
+    > * + * {
+      padding-block-start: var(--#{$list}--m-bordered--li--PaddingBlockStart);
+      border-block-start: var(--#{$list}--m-bordered--li--BorderBlockStartWidth) solid var(--#{$list}--m-bordered--li--BorderBlockStartColor);
     }
   }
+}
+
+.#{$list}__item {
+  display: flex;
+}
+
+.#{$list}__item-icon {
+  flex-shrink: 0;
+  min-width: var(--#{$list}__item-icon--MinWidth);
+  margin-block-start: var(--#{$list}__item-icon--MarginBlockStart);
+  margin-inline-end: var(--#{$list}__item-icon--MarginInlineEnd);
+  font-size: var(--#{$list}__item-icon--FontSize);
+  line-height: 1;
+  color: var(--#{$list}__item-icon--Color);
 }
